# QNote

./: CMakeLists.txt  main.cpp
src/: jsonhelper.cpp  jsonhelper.h
src/core/: application.cpp  application.h  note.cpp  note.h  notemanager.cpp  notemanager.h
src/core/interfaces/: INote.h  inote.h  iplugin.h
src/core/notes/: note.cpp  note.h  timelimitednote.cpp  timelimitednote.h
src/gui/: mainwindow.cpp  mainwindow.h  notemodel.cpp  notemodel.h  notewidget.cpp  notewidget.h  notewidget.ui
